--- a/public/output-style.css
+++ b/public/output-style.css
@@ -557,162 +557,160 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.absolute {
-  position: absolute;
-}
-
-.relative {
-  position: relative;
-}
-
-.right-6 {
-  right: 1.5rem;
-}
-
-.z-20 {
-  z-index: 20;
-}
-
-.z-10 {
-  z-index: 10;
-}
-
 .order-2 {
   order: 2;
+}
+
+.order-1 {
+  order: 1;
+}
+
+.order-3 {
+  order: 3;
+}
+
+.col-auto {
+  grid-column: auto;
+}
+
+.col-start-1 {
+  grid-column-start: 1;
+}
+
+.col-start-3 {
+  grid-column-start: 3;
 }
 
 .col-start-2 {
   grid-column-start: 2;
 }
 
-.mt-\[1rem\] {
-  margin-top: 1rem;
+.col-end-3 {
+  grid-column-end: 3;
+}
+
+.col-end-4 {
+  grid-column-end: 4;
+}
+
+.col-end-2 {
+  grid-column-end: 2;
+}
+
+.row-start-1 {
+  grid-row-start: 1;
+}
+
+.row-start-3 {
+  grid-row-start: 3;
+}
+
+.row-start-2 {
+  grid-row-start: 2;
+}
+
+.row-end-3 {
+  grid-row-end: 3;
+}
+
+.row-end-4 {
+  grid-row-end: 4;
+}
+
+.row-end-2 {
+  grid-row-end: 2;
 }
 
 .grid {
   display: grid;
 }
 
+.h-auto {
+  height: auto;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
 
-.gap-y-\[1\.5rem\] {
-  row-gap: 1.5rem;
+.max-w-6xl {
+  max-width: 72rem;
 }
 
-.gap-x-\[1\.9rem\] {
-  -moz-column-gap: 1.9rem;
-       column-gap: 1.9rem;
+.grid-flow-row {
+  grid-auto-flow: row;
+}
+
+.grid-flow-col {
+  grid-auto-flow: column;
+}
+
+.grid-cols-\[auto_auto\] {
+  grid-template-columns: auto auto;
+}
+
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-3 {
+  grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .place-self-center {
   place-self: center;
 }
 
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: hsl(0 100% 100% / var(--tw-border-opacity));
+.place-self-stretch {
+  place-self: stretch;
 }
 
-.border-lightGray {
-  --tw-border-opacity: 1;
-  border-color: hsl(0 0% 81% / var(--tw-border-opacity));
-}
-
-.border-moderateViolet {
-  --tw-border-opacity: 1;
-  border-color: hsl(263 55% 52% / var(--tw-border-opacity));
-}
-
-.border-opacity-50 {
-  --tw-border-opacity: 0.5;
-}
-
-.bg-lightGrayishBlue {
+.bg-softOrange {
   --tw-bg-opacity: 1;
-  background-color: hsl(210 46% 95% / var(--tw-bg-opacity));
+  background-color: hsl(35 77% 62% / var(--tw-bg-opacity));
 }
 
-.bg-moderateViolet {
+.bg-softRed {
   --tw-bg-opacity: 1;
-  background-color: hsl(263 55% 52% / var(--tw-bg-opacity));
+  background-color: hsl(5 85% 63% / var(--tw-bg-opacity));
 }
 
-.bg-veryDarkGrayishBlue {
+.bg-darkGrayishBlue {
   --tw-bg-opacity: 1;
-  background-color: hsl(217 19% 35% / var(--tw-bg-opacity));
+  background-color: hsl(236 13% 42% / var(--tw-bg-opacity));
 }
 
-.bg-white {
+.bg-grayishBlue {
   --tw-bg-opacity: 1;
-  background-color: hsl(0 100% 100% / var(--tw-bg-opacity));
+  background-color: hsl(233 8% 79% / var(--tw-bg-opacity));
 }
 
-.bg-veryDarkBlackishBlue {
-  --tw-bg-opacity: 1;
-  background-color: hsl(219 29% 14% / var(--tw-bg-opacity));
+.p-6 {
+  padding: 1.5rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.py-\[4\.5rem\] {
-  padding-top: 4.5rem;
-  padding-bottom: 4.5rem;
-}
-
-.pr-\[1rem\] {
-  padding-right: 1rem;
-}
-
-.pr-\[0\.2rem\] {
-  padding-right: 0.2rem;
-}
-
-.pl-\[0\.2rem\] {
-  padding-left: 0.2rem;
-}
-
-.pr-\[0\.35rem\] {
-  padding-right: 0.35rem;
-}
-
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.leading-\[1\.5rem\] {
-  line-height: 1.5rem;
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: hsl(0 100% 100% / var(--tw-text-opacity));
-}
-
-.text-veryDarkGrayishBlue {
-  --tw-text-opacity: 1;
-  color: hsl(217 19% 35% / var(--tw-text-opacity));
-}
-
-.text-opacity-50 {
-  --tw-text-opacity: 0.5;
-}
-
-.text-opacity-70 {
-  --tw-text-opacity: 0.7;
-}
-
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.p-10 {
+  padding: 2.5rem;
 }
 
 html {
@@ -720,8 +718,11 @@ html {
 }
 
 body {
-  font-family: 'Barlow Semi Condensed', sans-serif;
-  font-size: 0.8125rem;
+  font-family: 'Inter', sans-serif;
+}
+
+p {
+  font-size: 0.9375rem;
 }
 
 .attribution {
@@ -745,308 +746,34 @@ body {
   color: hsl(263, 55%, 80%);
 }
 
-@media (min-width: 768px) {
-  .md\:right-\[5\.5rem\] {
-    right: 5.5rem;
-  }
-
-  .md\:col-start-1 {
-    grid-column-start: 1;
-  }
-
-  .md\:col-start-3 {
-    grid-column-start: 3;
-  }
-
-  .md\:col-start-2 {
-    grid-column-start: 2;
-  }
-
-  .md\:col-start-4 {
-    grid-column-start: 4;
-  }
-
-  .md\:col-end-3 {
-    grid-column-end: 3;
-  }
-
-  .md\:col-end-4 {
-    grid-column-end: 4;
-  }
-
-  .md\:col-end-2 {
-    grid-column-end: 2;
-  }
-
-  .md\:col-end-5 {
-    grid-column-end: 5;
-  }
-
-  .md\:row-start-1 {
-    grid-row-start: 1;
-  }
-
-  .md\:row-start-2 {
-    grid-row-start: 2;
-  }
-
-  .md\:row-end-2 {
-    grid-row-end: 2;
-  }
-
-  .md\:row-end-3 {
-    grid-row-end: 3;
-  }
-
-  .md\:max-w-\[72\.5rem\] {
-    max-width: 72.5rem;
-  }
-
-  .md\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .md\:grid-rows-\[auto_auto\] {
-    grid-template-rows: auto auto;
-  }
-
-  .md\:pr-\[0\.5rem\] {
-    padding-right: 0.5rem;
-  }
-
-  .md\:pr-\[0\.6rem\] {
-    padding-right: 0.6rem;
-  }
+.\[\&\>div\]\:grid>div {
+  display: grid;
 }
 
-@media (min-width: 1024px) {
-  .lg\:right-\[5\.5rem\] {
-    right: 5.5rem;
-  }
-
-  .lg\:col-start-1 {
-    grid-column-start: 1;
-  }
-
-  .lg\:col-start-3 {
-    grid-column-start: 3;
-  }
-
-  .lg\:col-start-2 {
-    grid-column-start: 2;
-  }
-
-  .lg\:col-start-4 {
-    grid-column-start: 4;
-  }
-
-  .lg\:col-end-3 {
-    grid-column-end: 3;
-  }
-
-  .lg\:col-end-4 {
-    grid-column-end: 4;
-  }
-
-  .lg\:col-end-2 {
-    grid-column-end: 2;
-  }
-
-  .lg\:col-end-5 {
-    grid-column-end: 5;
-  }
-
-  .lg\:row-start-1 {
-    grid-row-start: 1;
-  }
-
-  .lg\:row-start-2 {
-    grid-row-start: 2;
-  }
-
-  .lg\:row-end-2 {
-    grid-row-end: 2;
-  }
-
-  .lg\:row-end-3 {
-    grid-row-end: 3;
-  }
-
-  .lg\:max-w-\[72\.5rem\] {
-    max-width: 72.5rem;
-  }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .lg\:grid-rows-\[auto_auto\] {
-    grid-template-rows: auto auto;
-  }
-
-  .lg\:pr-\[0\.5rem\] {
-    padding-right: 0.5rem;
-  }
-
-  .lg\:pr-\[0\.6rem\] {
-    padding-right: 0.6rem;
-  }
+.\[\&\>div\]\:grid-cols-2>div {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
-.\[\&\>section\>div\]\:order-1>section>div {
+.\[\&\>div\>div\]\:order-2>div>div {
+  order: 2;
+}
+
+.\[\&\>div\>div\]\:grid>div>div {
+  display: grid;
+}
+
+.\[\&\>div\>img\]\:order-1>div>img {
   order: 1;
 }
 
-.\[\&\>section\>div\]\:grid>section>div {
-  display: grid;
+.\[\&\>div\>div\>p\]\:order-1>div>div>p {
+  order: 1;
 }
 
-.\[\&\>section\>div\]\:grid-cols-\[auto_auto\]>section>div {
-  grid-template-columns: auto auto;
-}
-
-.\[\&\>section\>div\]\:gap-x-4>section>div {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
-}
-
-.\[\&\>section\>div\]\:place-self-start>section>div {
-  place-self: start;
-}
-
-.\[\&\>section\>h1\]\:order-2>section>h1 {
+.\[\&\>div\>div\>h2\]\:order-2>div>div>h2 {
   order: 2;
 }
 
-.\[\&\>section\>h1\]\:mt-\[1rem\]>section>h1 {
-  margin-top: 1rem;
-}
-
-.\[\&\>section\>h1\]\:pl-\[0\.2rem\]>section>h1 {
-  padding-left: 0.2rem;
-}
-
-.\[\&\>section\>h1\]\:pr-\[0\.35rem\]>section>h1 {
-  padding-right: 0.35rem;
-}
-
-.\[\&\>section\>h1\]\:text-xl>section>h1 {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.\[\&\>section\>h1\]\:leading-\[1\.5rem\]>section>h1 {
-  line-height: 1.5rem;
-}
-
-.\[\&\>section\>blockquote\]\:order-3>section>blockquote {
+.\[\&\>div\>div\>h3\]\:order-3>div>div>h3 {
   order: 3;
-}
-
-.\[\&\>section\>blockquote\]\:mt-\[1rem\]>section>blockquote {
-  margin-top: 1rem;
-}
-
-.\[\&\>section\>blockquote\]\:pl-\[0\.2rem\]>section>blockquote {
-  padding-left: 0.2rem;
-}
-
-.\[\&\>section\>blockquote\]\:leading-\[1\.13rem\]>section>blockquote {
-  line-height: 1.13rem;
-}
-
-.\[\&\>section\]\:grid>section {
-  display: grid;
-}
-
-.\[\&\>section\]\:rounded-lg>section {
-  border-radius: 0.5rem;
-}
-
-.\[\&\>section\]\:px-\[1\.85rem\]>section {
-  padding-left: 1.85rem;
-  padding-right: 1.85rem;
-}
-
-.\[\&\>section\]\:pt-\[1\.5rem\]>section {
-  padding-top: 1.5rem;
-}
-
-.\[\&\>section\]\:pb-\[2rem\]>section {
-  padding-bottom: 2rem;
-}
-
-.\[\&\>section\]\:shadow-lg>section {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.\[\&\>section\>div\>h2\]\:col-start-2>section>div>h2 {
-  grid-column-start: 2;
-}
-
-.\[\&\>section\>div\>p\]\:col-start-2>section>div>p {
-  grid-column-start: 2;
-}
-
-.\[\&\>section\>div\>p\]\:-mt-1>section>div>p {
-  margin-top: -0.25rem;
-}
-
-.\[\&\>section\>div\>p\]\:text-\[0\.7rem\]>section>div>p {
-  font-size: 0.7rem;
-}
-
-.\[\&\>section\>div\>img\]\:row-start-1>section>div>img {
-  grid-row-start: 1;
-}
-
-.\[\&\>section\>div\>img\]\:row-end-3>section>div>img {
-  grid-row-end: 3;
-}
-
-.\[\&\>section\>div\>img\]\:h-\[1\.95rem\]>section>div>img {
-  height: 1.95rem;
-}
-
-.\[\&\>section\>div\>img\]\:w-\[1\.95rem\]>section>div>img {
-  width: 1.95rem;
-}
-
-.\[\&\>section\>div\>img\]\:rounded-full>section>div>img {
-  border-radius: 9999px;
-}
-
-.\[\&\>section\>div\>img\]\:border-2>section>div>img {
-  border-width: 2px;
-}
-
-.\[\&\>section\>h2\]\:order-2>section>h2 {
-  order: 2;
-}
-
-.\[\&\>section\>h2\]\:mt-\[1rem\]>section>h2 {
-  margin-top: 1rem;
-}
-
-.\[\&\>section\>h2\]\:pl-\[0\.2rem\]>section>h2 {
-  padding-left: 0.2rem;
-}
-
-.\[\&\>section\>h2\]\:pr-\[0\.35rem\]>section>h2 {
-  padding-right: 0.35rem;
-}
-
-.\[\&\>section\>h2\]\:text-xl>section>h2 {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.\[\&\>section\>h2\]\:leading-\[1\.5rem\]>section>h2 {
-  line-height: 1.5rem;
-}
-
-.\[\&\>section\>div\>h3\]\:col-start-2>section>div>h3 {
-  grid-column-start: 2;
 }
