feat: full mobile design

--- a/public/output-style.css
+++ b/public/output-style.css
@@ -613,6 +613,82 @@ video {
   margin-top: 1.35rem;
 }
 
+.-mb-2 {
+  margin-bottom: -0.5rem;
+}
+
+.-mb-\[0\.6rem\] {
+  margin-bottom: -0.6rem;
+}
+
+.-mb-\[0\.2rem\] {
+  margin-bottom: -0.2rem;
+}
+
+.-mb-\[0\.3rem\] {
+  margin-bottom: -0.3rem;
+}
+
+.-mb-\[0\.25rem\] {
+  margin-bottom: -0.25rem;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+}
+
+.mb-\[0\.5rem\] {
+  margin-bottom: 0.5rem;
+}
+
+.mb-\[1rem\] {
+  margin-bottom: 1rem;
+}
+
+.mb-\[0\.2rem\] {
+  margin-bottom: 0.2rem;
+}
+
+.mb-\[1\.1rem\] {
+  margin-bottom: 1.1rem;
+}
+
+.mb-\[0\.8rem\] {
+  margin-bottom: 0.8rem;
+}
+
+.mb-\[0\.75rem\] {
+  margin-bottom: 0.75rem;
+}
+
+.mb-\[2rem\] {
+  margin-bottom: 2rem;
+}
+
+.mb-\[3rem\] {
+  margin-bottom: 3rem;
+}
+
+.mb-\[3\.5rem\] {
+  margin-bottom: 3.5rem;
+}
+
+.mb-\[4rem\] {
+  margin-bottom: 4rem;
+}
+
+.mb-\[3\.9rem\] {
+  margin-bottom: 3.9rem;
+}
+
+.mb-\[3\.95rem\] {
+  margin-bottom: 3.95rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
+}
+
 .grid {
   display: grid;
 }
@@ -665,12 +741,20 @@ video {
   gap: 1rem;
 }
 
+.gap-\[2rem\] {
+  gap: 2rem;
+}
+
 .place-self-center {
   place-self: center;
 }
 
 .place-self-stretch {
   place-self: stretch;
+}
+
+.border-none {
+  border-style: none;
 }
 
 .bg-softOrange {
@@ -688,12 +772,25 @@ video {
   background-color: hsl(236 13% 42% / var(--tw-bg-opacity));
 }
 
+.bg-veryDarkBlue {
+  --tw-bg-opacity: 1;
+  background-color: hsl(240 100% 5% / var(--tw-bg-opacity));
+}
+
 .p-4 {
   padding: 1rem;
 }
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-\[1\.4rem\] {
+  padding: 1.4rem;
+}
+
+.p-\[1\.3rem\] {
+  padding: 1.3rem;
 }
 
 .px-4 {
@@ -776,6 +873,11 @@ video {
   padding-right: 2rem;
 }
 
+.px-\[1\.3rem\] {
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
+}
+
 .pt-7 {
   padding-top: 1.75rem;
 }
@@ -840,6 +942,14 @@ video {
   padding-bottom: 4rem;
 }
 
+.pt-\[1rem\] {
+  padding-top: 1rem;
+}
+
+.pt-\[1\.1rem\] {
+  padding-top: 1.1rem;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -886,6 +996,10 @@ video {
 
 .text-\[0\.9rem\] {
   font-size: 0.9rem;
+}
+
+.text-\[2rem\] {
+  font-size: 2rem;
 }
 
 .font-800 {
@@ -993,6 +1107,11 @@ video {
   color: hsl(36 100% 99% / var(--tw-text-opacity));
 }
 
+.text-softOrange {
+  --tw-text-opacity: 1;
+  color: hsl(35 77% 62% / var(--tw-text-opacity));
+}
+
 .text-opacity-75 {
   --tw-text-opacity: 0.75;
 }
@@ -1003,6 +1122,10 @@ video {
 
 .text-opacity-90 {
   --tw-text-opacity: 0.9;
+}
+
+.text-opacity-95 {
+  --tw-text-opacity: 0.95;
 }
 
 html {
@@ -1108,12 +1231,77 @@ p {
   }
 }
 
+.\[\&\>div\]\:mt-\[1rem\]>div {
+  margin-top: 1rem;
+}
+
+.\[\&\>div\]\:mt-\[1\.5rem\]>div {
+  margin-top: 1.5rem;
+}
+
+.\[\&\>div\]\:mt-\[1\.45rem\]>div {
+  margin-top: 1.45rem;
+}
+
+.\[\&\>div\]\:mt-\[1\.48rem\]>div {
+  margin-top: 1.48rem;
+}
+
+.\[\&\>div\]\:mt-\[2rem\]>div {
+  margin-top: 2rem;
+}
+
+.\[\&\>div\]\:mt-\[1\.9rem\]>div {
+  margin-top: 1.9rem;
+}
+
+.\[\&\>div\]\:mt-\[1\.8rem\]>div {
+  margin-top: 1.8rem;
+}
+
+.\[\&\>div\]\:mt-\[1\.75rem\]>div {
+  margin-top: 1.75rem;
+}
+
 .\[\&\>div\]\:grid>div {
   display: grid;
 }
 
 .\[\&\>div\]\:grid-cols-2>div {
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.\[\&\>div\]\:grid-cols-\[auto_auto\]>div {
+  grid-template-columns: auto auto;
+}
+
+.\[\&\>div\]\:gap-\[1rem\]>div {
+  gap: 1rem;
+}
+
+.\[\&\>div\]\:gap-\[1\.5rem\]>div {
+  gap: 1.5rem;
+}
+
+.\[\&\>div\]\:gap-\[1\.4rem\]>div {
+  gap: 1.4rem;
+}
+
+.\[\&\>div\]\:border-b-2>div {
+  border-bottom-width: 2px;
+}
+
+.\[\&\>div\]\:border-b-\[1px\]>div {
+  border-bottom-width: 1px;
+}
+
+.\[\&\>div\]\:border-b-grayishBlue>div {
+  --tw-border-opacity: 1;
+  border-bottom-color: hsl(233 8% 79% / var(--tw-border-opacity));
+}
+
+.\[\&\>div\]\:border-opacity-70>div {
+  --tw-border-opacity: 0.7;
 }
 
 .\[\&\>div\>div\]\:order-2>div>div {
@@ -1124,18 +1312,305 @@ p {
   display: grid;
 }
 
+.\[\&\>div\>div\]\:place-items-start>div>div {
+  place-items: start;
+}
+
+.\[\&\>div\>div\]\:content-start>div>div {
+  align-content: flex-start;
+}
+
 .\[\&\>div\>img\]\:order-1>div>img {
   order: 1;
+}
+
+.\[\&\>div\>img\]\:h-3>div>img {
+  height: 0.75rem;
+}
+
+.\[\&\>div\>img\]\:h-10>div>img {
+  height: 2.5rem;
+}
+
+.\[\&\>div\>img\]\:h-36>div>img {
+  height: 9rem;
+}
+
+.\[\&\>div\>img\]\:h-\[8\.5rem\]>div>img {
+  height: 8.5rem;
+}
+
+.\[\&\>div\>img\]\:h-\[8rem\]>div>img {
+  height: 8rem;
+}
+
+.\[\&\>div\>img\]\:h-\[8\.3rem\]>div>img {
+  height: 8.3rem;
+}
+
+.\[\&\>div\>img\]\:h-\[8\.2rem\]>div>img {
+  height: 8.2rem;
+}
+
+.\[\&\>div\>img\]\:h-\[8\.15rem\]>div>img {
+  height: 8.15rem;
+}
+
+.\[\&\>div\>img\]\:object-cover>div>img {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .\[\&\>div\>div\>p\]\:order-1>div>div>p {
   order: 1;
 }
 
+.\[\&\>div\>div\>p\]\:text-\[2rem\]>div>div>p {
+  font-size: 2rem;
+}
+
+.\[\&\>div\>div\>p\]\:text-\[2\.2rem\]>div>div>p {
+  font-size: 2.2rem;
+}
+
+.\[\&\>div\>div\>p\]\:text-\[2\.1rem\]>div>div>p {
+  font-size: 2.1rem;
+}
+
+.\[\&\>div\>div\>p\]\:font-800>div>div>p {
+  font-weight: 800;
+}
+
+.\[\&\>div\>div\>p\]\:leading-\[0rem\]>div>div>p {
+  line-height: 0rem;
+}
+
+.\[\&\>div\>div\>p\]\:leading-\[0\.5rem\]>div>div>p {
+  line-height: 0.5rem;
+}
+
+.\[\&\>div\>div\>p\]\:leading-\[1\.5rem\]>div>div>p {
+  line-height: 1.5rem;
+}
+
+.\[\&\>div\>div\>p\]\:leading-\[2rem\]>div>div>p {
+  line-height: 2rem;
+}
+
+.\[\&\>div\>div\>p\]\:leading-\[2\.2rem\]>div>div>p {
+  line-height: 2.2rem;
+}
+
+.\[\&\>div\>div\>p\]\:leading-\[2\.1rem\]>div>div>p {
+  line-height: 2.1rem;
+}
+
+.\[\&\>div\>div\>p\]\:text-grayishBlue>div>div>p {
+  --tw-text-opacity: 1;
+  color: hsl(233 8% 79% / var(--tw-text-opacity));
+}
+
 .\[\&\>div\>div\>h2\]\:order-2>div>div>h2 {
   order: 2;
 }
 
+.\[\&\>div\>div\>h2\]\:mt-\[1rem\]>div>div>h2 {
+  margin-top: 1rem;
+}
+
+.\[\&\>div\>div\>h2\]\:mt-\[0\.5rem\]>div>div>h2 {
+  margin-top: 0.5rem;
+}
+
+.\[\&\>div\>div\>h2\]\:mt-\[0\.7rem\]>div>div>h2 {
+  margin-top: 0.7rem;
+}
+
 .\[\&\>div\>div\>h3\]\:order-3>div>div>h3 {
   order: 3;
+}
+
+.\[\&\>div\>div\>h3\]\:mt-\[1rem\]>div>div>h3 {
+  margin-top: 1rem;
+}
+
+.\[\&\>div\>div\>h3\]\:mt-\[0\.5rem\]>div>div>h3 {
+  margin-top: 0.5rem;
+}
+
+.\[\&\>div\>div\>h3\]\:mt-\[0\.45rem\]>div>div>h3 {
+  margin-top: 0.45rem;
+}
+
+.\[\&\>div\>div\>h3\]\:mt-\[0\.4rem\]>div>div>h3 {
+  margin-top: 0.4rem;
+}
+
+.\[\&\>div\>div\>h3\]\:leading-\[1rem\]>div>div>h3 {
+  line-height: 1rem;
+}
+
+.\[\&\>div\>div\>h3\]\:leading-\[2rem\]>div>div>h3 {
+  line-height: 2rem;
+}
+
+.\[\&\>div\>div\>h3\]\:leading-\[1\.5rem\]>div>div>h3 {
+  line-height: 1.5rem;
+}
+
+.\[\&\>div\>div\>h3\]\:leading-\[1\.6rem\]>div>div>h3 {
+  line-height: 1.6rem;
+}
+
+.\[\&\>div\>div\>h3\]\:text-darkGrayishBlue>div>div>h3 {
+  --tw-text-opacity: 1;
+  color: hsl(236 13% 42% / var(--tw-text-opacity));
+}
+
+.\[\&\>div\>a\]\:text-\[1\.5rem\]>div>a {
+  font-size: 1.5rem;
+}
+
+.\[\&\>div\>a\]\:text-\[1rem\]>div>a {
+  font-size: 1rem;
+}
+
+.\[\&\>div\>a\]\:text-\[1\.3rem\]>div>a {
+  font-size: 1.3rem;
+}
+
+.\[\&\>div\>a\]\:text-\[1\.25rem\]>div>a {
+  font-size: 1.25rem;
+}
+
+.\[\&\>div\>a\]\:font-700>div>a {
+  font-weight: 700;
+}
+
+.\[\&\>div\>a\]\:text-white>div>a {
+  --tw-text-opacity: 1;
+  color: hsl(0 100% 100% / var(--tw-text-opacity));
+}
+
+.\[\&\>div\>p\]\:mt-\[1rem\]>div>p {
+  margin-top: 1rem;
+}
+
+.\[\&\>div\>p\]\:mb-\[1rem\]>div>p {
+  margin-bottom: 1rem;
+}
+
+.\[\&\>div\>p\]\:mb-\[1\.1rem\]>div>p {
+  margin-bottom: 1.1rem;
+}
+
+.\[\&\>div\>p\]\:mt-\[1\.5rem\]>div>p {
+  margin-top: 1.5rem;
+}
+
+.\[\&\>div\>p\]\:pr-8>div>p {
+  padding-right: 2rem;
+}
+
+.\[\&\>div\>p\]\:pr-3>div>p {
+  padding-right: 0.75rem;
+}
+
+.\[\&\>div\>p\]\:pr-4>div>p {
+  padding-right: 1rem;
+}
+
+.\[\&\>div\>p\]\:leading-\[1rem\]>div>p {
+  line-height: 1rem;
+}
+
+.\[\&\>div\>p\]\:leading-\[1\.5rem\]>div>p {
+  line-height: 1.5rem;
+}
+
+.\[\&\>div\>p\]\:leading-\[1\.55rem\]>div>p {
+  line-height: 1.55rem;
+}
+
+.\[\&\>div\>p\]\:leading-\[1\.555rem\]>div>p {
+  line-height: 1.555rem;
+}
+
+.\[\&\>div\>p\]\:leading-\[1\.56rem\]>div>p {
+  line-height: 1.56rem;
+}
+
+.\[\&\>div\>p\]\:leading-\[1\.57rem\]>div>p {
+  line-height: 1.57rem;
+}
+
+.\[\&\>div\>p\]\:leading-\[1\.6rem\]>div>p {
+  line-height: 1.6rem;
+}
+
+.\[\&\>div\>p\]\:leading-\[1\.65rem\]>div>p {
+  line-height: 1.65rem;
+}
+
+.\[\&\>div\>p\]\:text-grayishBlue>div>p {
+  --tw-text-opacity: 1;
+  color: hsl(233 8% 79% / var(--tw-text-opacity));
+}
+
+.\[\&\>div\>p\]\:text-darkGrayishBlue>div>p {
+  --tw-text-opacity: 1;
+  color: hsl(236 13% 42% / var(--tw-text-opacity));
+}
+
+.\[\&\>div\>p\]\:text-opacity-80>div>p {
+  --tw-text-opacity: 0.8;
+}
+
+.\[\&\>div\>p\]\:text-opacity-70>div>p {
+  --tw-text-opacity: 0.7;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:mt-\[0\.5rem\]>div>div>h2>a {
+  margin-top: 0.5rem;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:mt-\[1rem\]>div>div>h2>a {
+  margin-top: 1rem;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:mt-\[1\.5rem\]>div>div>h2>a {
+  margin-top: 1.5rem;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:pt-\[1\.5rem\]>div>div>h2>a {
+  padding-top: 1.5rem;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:text-\[2rem\]>div>div>h2>a {
+  font-size: 2rem;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:text-\[1\.5rem\]>div>div>h2>a {
+  font-size: 1.5rem;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:text-\[1rem\]>div>div>h2>a {
+  font-size: 1rem;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:text-\[1\.2rem\]>div>div>h2>a {
+  font-size: 1.2rem;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:text-\[1\.1rem\]>div>div>h2>a {
+  font-size: 1.1rem;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:font-700>div>div>h2>a {
+  font-weight: 700;
+}
+
+.\[\&\>div\>div\>h2\>a\]\:text-veryDarkBlue>div>div>h2>a {
+  --tw-text-opacity: 1;
+  color: hsl(240 100% 5% / var(--tw-text-opacity));
 }
